<!--
  ~ Copyright (c) 2014-2015 Sean Liu.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Pioneer</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_login">Your pioneer account</string>
    <string name="hint_password">Password of account</string>
    <string name="sign_up">Sign up</string>

    <string name="title_me">我的</string>
    <string name="title_login">登录</string>

    <string name="empty">空空如也</string>
    <string name="loading">努力加载中…</string>
    <string name="no_more">没有更多数据</string>
    <string name="failed_to_load">加载失败</string>

    <string name="camera_permission_needed">需要开启“相机”权限才能使用此功能</string>

</resources>
